--- a/index.html
+++ b/index.html
@@ -1580,7 +1580,7 @@
 
         // 지원하기 - 잡알리오 실제 게시글로 이동
         function applyToJob(jobIdx) {
-            const alio_url = `https://job.alio.go.kr/recruitview.do?pageNo=1&idx=${jobIdx}&s_date=2025.06.30&e_date=2025.08.31&org_type=&org_name=&search_type=&keyword=&order=REG_DATE&sort=DESC&pageSet=10`;
+            const alio_url = `https://job.alio.go.kr/recruitview.do?idx=${jobIdx}`;
             window.open(alio_url, '_blank');
         }
 
