--- a/index.html
+++ b/index.html
@@ -1761,9 +1761,23 @@
             document.getElementById('jobModal').style.display = 'none';
         }
 
-        // 지원하기 - 잡알리오 실제 게시글로 이동
+        // 모바일 기기 감지 함수
+        function isMobileDevice() {
+            return /iPhone|iPad|iPod|Android|BlackBerry|Windows Phone|webOS|Opera Mini/i.test(navigator.userAgent);
+        }
+
+        // 지원하기 - 잡알리오 실제 게시글로 이동 (기기별 분기)
         function applyToJob(jobIdx) {
-            const alio_url = `https://job.alio.go.kr/recruitview.do?pageNo=1&idx=${jobIdx}&s_date=2025.06.30&e_date=2025.08.31&org_type=&org_name=&search_type=&keyword=&order=REG_DATE&sort=DESC&pageSet=10`;
+            let alio_url;
+            
+            if (isMobileDevice()) {
+                // 모바일: 모바일 전용 URL 사용
+                alio_url = `https://job.alio.go.kr/mobile2021/recruit/recruitView.do?idx=${jobIdx}`;
+            } else {
+                // PC: 기존 URL 유지
+                alio_url = `https://job.alio.go.kr/recruitview.do?pageNo=1&idx=${jobIdx}&s_date=2025.06.30&e_date=2025.08.31&org_type=&org_name=&search_type=&keyword=&order=REG_DATE&sort=DESC&pageSet=10`;
+            }
+            
             window.open(alio_url, '_blank');
         }
 
