--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- PWA 메타태그 -->
+    <meta name="theme-color" content="#2d6a4f">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="공공 채용">
+
+    <!-- 아이콘 설정 -->
+    <link rel="apple-touch-icon" href="public_job_icon_192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="public_job_icon_192.png">
+    <link rel="manifest" href="manifest.json">
     
     <!-- SEO 최적화 메타태그 -->
     <title>대한민국 공공기관 채용정보 | 고용·채용·일자리·일터·채용정보 취업포털</title>
@@ -2000,3 +2010,4 @@
     </script>
 </body>
 </html>
+
