--- a/index.html
+++ b/index.html
@@ -405,14 +405,14 @@
         }
 
         /* 광고 영역 스타일 */
-        .ad-container {
+       * .ad-container {
             max-width: 1400px;
             margin: 0 auto;
             padding: 20px;
             text-align: center;
-        }
+        }*
 
-        .ad-top {
+        *.ad-top {
             background: #f8f9fa;
             border: 2px dashed #dee2e6;
             border-radius: 8px;
@@ -428,9 +428,9 @@
             justify-content: center;
             font-size: 14px;
             color: #6c757d;
-        }
+        }*
 
-        .ad-middle {
+       * .ad-middle {
             background: #f8f9fa;
             border: 2px dashed #dee2e6;
             border-radius: 8px;
@@ -444,9 +444,9 @@
             justify-content: center;
             font-size: 14px;
             color: #6c757d;
-        }
+        }*
 
-        .ad-bottom {
+      *  .ad-bottom {
             background: #f8f9fa;
             border: 2px dashed #dee2e6;
             border-radius: 8px;
@@ -462,7 +462,7 @@
             justify-content: center;
             font-size: 14px;
             color: #6c757d;
-        }
+        }*
 
         /* 컨테이너 */
         .container {
@@ -1203,14 +1203,14 @@
         </div>
     </div>
 
-    <!-- 상단 광고 영역 -->
+   * <!-- 상단 광고 영역 -->
     <div class="ad-container">
         <div class="ad-top">
             <div>
                 📢 상단 광고 영역 (728x90 배너)
             </div>
         </div>
-    </div>
+    </div>*
 
     <!-- 메인 컨테이너 -->
     <div class="container">
@@ -1252,12 +1252,12 @@
         </div>
         <!-- EM1 영역 끝 -->
 
-        <!-- 중단 광고 영역 (728x45) -->
+      *  <!-- 중단 광고 영역 (728x45) -->
         <div class="ad-middle">
             <div>
                 🎯 중단 광고 영역 (728x45 배너)
             </div>
-        </div>
+        </div>*
 
         <!-- EM2 영역 시작: 채용공고 카드 + 페이지네이션 -->
         <div id="em2" class="em2-section">
@@ -1274,12 +1274,12 @@
         </div>
         <!-- EM2 영역 끝 -->
 
-        <!-- 하단 광고 영역 -->
+      * <!-- 하단 광고 영역 -->
         <div class="ad-bottom">
             <div>
                 📣 하단 광고 영역 (728x90 배너)
             </div>
-        </div>
+        </div>*
     </div>
 
     <!-- 상세보기 모달 -->
@@ -2010,4 +2010,5 @@
     </script>
 </body>
 </html>
+
 
