--- a/privacy.html
+++ b/privacy.html
@@ -186,7 +186,7 @@
     <div class="header">
         <div class="header-content">
             <h1>🏢 대한민국 공공일터 채용정보</h1>
-            <a href="9월 8일 최종 배포버전.html" class="back-button">← 메인으로 돌아가기</a>
+            <a href="index.html" class="back-button">← 메인으로 돌아가기</a>
         </div>
     </div>
 
@@ -293,4 +293,5 @@
         </div>
     </div>
 </body>
+
 </html>
