--- a/terms.html
+++ b/terms.html
@@ -331,7 +331,7 @@
                             <span>중요 안내</span>
                         </h4>
                         <p>본 사이트는 채용 공고의 정확성과 적시성을 보장하기 위해 최선을 다하고 있으나, 
-                        공공데이터 API 요청 한도로 인해 5분 지연으로 정보를 가져오며, 
+                        공공데이터 API 요청 한도로 인해 10분 간격으로 정보를 가져오며, 
                         원문 공고와 차이가 있을 수 있습니다. <strong>반드시 원문 공고를 참조하시기 바랍니다.</strong></p>
                     </div>
                     
@@ -403,3 +403,4 @@
     </div>
 </body>
 </html>
+
