--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         },
         "mainEntity": {
             "@type": "JobPosting",
+            "title": "대한민국 공공일터 채용정보",
             "description": "대한민국 정부기관, 공공기관, 지자체 채용정보",
             "datePosted": "2025-09-06",
             "validThrough": "2025-12-31",
@@ -3220,4 +3221,5 @@
     </script>
 </body>
 </html>
+
 
