--- a/index.html
+++ b/index.html
@@ -127,8 +127,14 @@
             },
             "jobLocation": {
                 "@type": "Place",
-                "addressCountry": "KR",
-                "addressRegion": "전국"
+                "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "둔산북로 175, 4동 803호",
+                "addressLocality": "서구",
+                "addressRegion": "대전광역시",
+                "postalCode": "35243",
+                "addressCountry": "KR"
+                }
             }
         }
     }
@@ -3221,5 +3227,6 @@
     </script>
 </body>
 </html>
+
 
 
